2008-09-25  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	* qt4/qt4.pro
	- updated a version number string, Official release 12.1.2.

2008-09-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* classic/controler.cpp:
	* classic/nowindow.cpp:
	* icons/blank.xpm:
	* icons/ff.xpm:
	* icons/go.xpm:
	* icons/minus.xpm:
	* icons/next_score.xpm:
	* icons/open.xpm:
	* icons/play.xpm:
	* icons/plus.xpm:
	* icons/prev_score.xpm:
	* icons/quit.xpm:
	* icons/rcss.xpm:
	* icons/rec.xpm:
	* icons/rev.xpm:
	* icons/rew.xpm:
	* icons/stop.xpm:
	* qt4/disp_holder.cpp:
	* qt4/monitor_server.cpp:
	* qt4/mouse_state.h:
	* qt4/team_graphic_painter.cpp:
	* rcsslogplayer/parser.cpp:
	* rcsslogplayer/util.cpp:
	* tool/rcg2xml.cpp:
	- fixed gcc-4.3 compilation problems.

2008-08-05  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/config_dialog.cpp:
	- fixed an illegal signal connection.

2008-08-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/qt4.pro:
	- updated a version number string.

2008-08-03  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/qt4.pro:
	- fixed a build problem with MacPorts qt-mac-4.4.0.

2008-08-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/main_window.cpp:
	- fixed a default server host string.

2008-07-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	- updated a version number string, Official release 12.1.1.

	* qt4/options.cpp:
	- fixed an illegal option name.

	* qt4/team_graphic_painter.cpp:
	- fixed a bug of the team_graphic painting for right side teams.

2008-05-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/log_player.cpp:
	* qt4/main_window.cpp:
	* qt4/options.cpp:
	* qt4/options.h:
	- implemented an auto quit mode.

2008-04-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	- updated a version number string. Official release 12.1.0.

	* qt4/log_slider_tool_bar.cpp:
	* qt4/main_window.cpp:
	- fixed statustip messages.
